--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .navbar {
